compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:6:5: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    inlineFun {}
    ^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:7:5: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    inlineGetter
    ^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:11:5: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    inlineSetter = 1
    ^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:13:5: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    allInline
    ^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:14:5: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    allInline = 1
    ^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:16:5: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    inlineProperty
    ^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:17:5: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    inlineProperty = 1
    ^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:20:10: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    base.inlineFunBase {}
         ^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:21:10: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    base.inlineGetterBase
         ^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:25:10: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    base.inlineSetterBase = 1
         ^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:27:10: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    base.allInlineBase
         ^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:28:10: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    base.allInlineBase = 1
         ^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:30:10: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    base.inlinePropertyBase
         ^^^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:31:10: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
    base.inlinePropertyBase = 1
         ^^^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:38:9: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
        inlineFunBase {}
        ^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:39:9: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
        inlineGetterBase
        ^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:43:9: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
        inlineSetterBase = 1
        ^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:45:9: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
        allInlineBase
        ^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:46:9: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
        allInlineBase = 1
        ^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:48:9: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
        inlinePropertyBase
        ^^^^^^^^^^^^^^^^^^
compiler/testData/compileKotlinAgainstCustomBinaries/wrongInlineTarget/source.kt:49:9: error: cannot inline bytecode built with JVM target 11 into bytecode that is being built with JVM target 1.8. Please specify proper '-jvm-target' option.
        inlinePropertyBase = 1
        ^^^^^^^^^^^^^^^^^^
COMPILATION_ERROR
